add docs routes authentication
