# app/Http/Controllers/Controller.php
@@ -18,6 +18,16 @@ use Laravel\Lumen\Routing\Controller as BaseController;
  *       name="Apache 2.0",
  *       url="http://www.apache.org/licenses/LICENSE-2.0.html"
  *   )
+ * ),
+ * 
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     description="Login with email and password to get the authentication token",
+ *     name="Token based Based",
+ *     in="header",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     securityScheme="bearerAuth",
  * )
  */
 
